Update the index page.

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,6 @@ extends layout
 block content
     h1= title
     p Hello! Welcome to #{title} - A #{full_title} website.
+    br
+    h4 Author: Yaobin "Robin" Wen
+    h4 Email: yaobinw@andrew.cmu.edu
